fix: overflow on mobile

--- a/sgo/login/style.css
+++ b/sgo/login/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 
@@ -377,6 +377,7 @@ a {
 @media screen and (width <= 1250px) {
     body {
         overflow-y: scroll;
+        overflow-x: hidden;
     }
 }
 
